Refactor consumer classes to enhance reactive programming support by introducing CheckAliveService for health checks and updating method signatures for improved clarity.